Migrate to HttpClient